feat(inventory): route putaway by item class, not by per-SKU policy
Putaway had two independent defects (louisburroughs/durion-positivity-backend#1514).

Rule selection ignored the item entirely: generateTasksForReceipt took the
highest-priority enabled rule and applied it to every line of every receipt, so
tires, oil and spark plugs all resolved to the same destination. The criteria
JSON column that was supposed to discriminate them was never read by any
production code.

Destination eligibility then required a (itemSKU, locationId) replenishment
policy row to exist. Receiving a genuinely new SKU is an ordinary event, and it
could not be put away anywhere: generation resolved a destination and validation
then refused it for having no policy. Replenishment min/max is a slotting target
for keeping a pick face stocked, not a statement that an item may be stored
somewhere, and no mature WMS gates putaway on it.

Rules now match the item:

- V42 replaces criteria with match_type (SKU | SUBCATEGORY | CATEGORY | ANY) and
  match_value, with a CHECK that ANY carries no value. Nothing ever parsed
  criteria, so every existing enabled rule was already an unconditional
  catch-all and maps to ANY without changing behavior.
- PutawayRuleMatcher resolves per line, batching one rule query and one category
  lookup per receipt. Precedence is absolute: a SKU rule outranks a subcategory
  rule, which outranks a category rule, which outranks ANY; priority only breaks
  ties within a tier, with ruleId as a deterministic final key.
- The hardcoded 00000000-0000-0000-0000-000000000001 fallback is gone. A seeded
  ANY rule is the terminal fallback, which is what guarantees a new SKU never
  dead-ends; its absence is a configuration error naming the remedy rather than
  a task pointing at a bin that does not exist.
- PutawayDestinationResolver is untouched.

Eligibility now asks whether the destination is physically fit:

- V43 adds storage_compatibility, seeded with the 12 catalog categ